kadai-microposts first

--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -10,10 +10,13 @@
           <div>
             <p><%= micropost.content %></p>
           </div>
-          <div>
-            <% if current_user == micropost.user %>
-              <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
-            <% end %>
+          <div class="row">
+            <div class="d-flex flex-row">
+              <%= render 'favorites/favo_button', micropost: micropost %>
+              <% if current_user == micropost.user %>
+                <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
+              <% end %>
+            </div>
           </div>
         </div>
       </li>
